click on arrow and get dropdown list job numbers specific for that day appear. right now dummy date because it s very early and no actual jobs. will work on formatting tomorrow and changing rest of drop downs under reportin when the job number is selected

--- a/src/App.css
+++ b/src/App.css
@@ -1557,3 +1557,7 @@ h1, h4, h5 {
       .5em 0 0 white;}
 }
 /* end of loading dots */
+.dropDownList{
+  display:flex;
+  justify-content:flex-start;
+}
