--- a/src/App.css
+++ b/src/App.css
@@ -307,14 +307,14 @@ h1, h4, h5 {
 
 .chat-item-container {
   margin-top: 58px;
-  display: flex;
+  display: absolute;
   flex-direction: column;
   align-items: center;
   padding: 25px 0;
 }
 
 .chat-item-container > h5 {
-  font-size: 10px;
+  font-size: 0px;
   font-weight: 500;
   color: var(--inactive-grey1);
 }
