--- a/src/App.css
+++ b/src/App.css
@@ -1563,10 +1563,10 @@ h1, h4, h5 {
   position: relative;
   display: block;
   vertical-align: top;
-  width: 100px;
-  height: 30px;
+  width: 80px;
+  height: 22px;
   padding: 3px;
-  margin: 20px 10px -5px 0;
+  margin: 28px 10px -5px 0;
   background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
   background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);
   border-radius: 18px;
@@ -1625,8 +1625,8 @@ h1, h4, h5 {
   position: absolute;
   top: 4px;
   left: 4px;
-  width: 28px;
-  height: 28px;
+  width: 20px;
+  height: 20px;
   background: linear-gradient(to bottom, #FFFFFF 40%, #f0f0f0);
   background-image: -webkit-linear-gradient(top, #FFFFFF 40%, #f0f0f0);
   border-radius: 100%;
@@ -1646,7 +1646,7 @@ h1, h4, h5 {
   box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
 }
 .switch-input:checked ~ .switch-handle {
-  left: 74px;
+  left: 60px;
   box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 /* Transition
@@ -1656,5 +1656,18 @@ h1, h4, h5 {
   -webkit-transition: All 0.3s ease;
   -moz-transition: All 0.3s ease;
   -o-transition: All 0.3s ease;
+}
+
+.toggleChatContainer {
+  display:flex;
+  margin-left:1em;
+}
+
+.toggleChatContainer h5 {
+  margin-top:2em;
+  margin-right:1em;
+  font-weight: normal;
+  color:black;
+  font-size:15px;
 }
 
